deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
    name: api
---
apiVersion: v1
kind: Service
metadata:
  name: node-rediscrashcourse
spec:
  selector:
    app: node-rediscrashcourse
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
    name: auth
---
apiVersion: v1
kind: Service
metadata:
  name: node-rediscrashcourse-auth
spec:
  selector:
    app: node-rediscrashcourse-auth
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
    name: login
