deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
  name: node-rediscrashcourse
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: node-rediscrashcourse
            port:
              number: 8082
        path: /api
        pathType: ImplementationSpecific
      - backend:
          service:
            name: node-rediscrashcourse-auth
            port:
              number: 8083
        path: /login
        pathType: ImplementationSpecific
      - backend:
          service:
            name: node-rediscrashcourse-auth
            port:
              number: 8083
        path: /logout
        pathType: ImplementationSpecific
